using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace CatStory
{
    internal class AnimationStrings
    {
        internal static string isMoving = "isMoving";
        internal static string jump = "jump";
        internal static string isGrounded = "isGrounded";
        internal static string meleeAttack = "meleeAttack";
        internal static string meowAttack = "meowAttack";
        internal static string isOnTheCeiling = "isOnTheCeiling";
        internal static string dead = "dead";
        internal static string superCat = "superCat";
    }
}
